--- a/docs/references/javascript/user/password-management.mdx
+++ b/docs/references/javascript/user/password-management.mdx
@@ -123,11 +123,13 @@ function updatePassword: (params: UpdateUserPasswordParams) => Promise<User>;
     <p id="error"></p>
     <button id="update-password-button">Update password</button>
 
+    <!-- Initialize Clerk with your
+    Clerk Publishable key and Frontend API URL -->
     <script
       async
       crossorigin="anonymous"
-      data-clerk-publishable-key='{{pub_key}}'
-      src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+      data-clerk-publishable-key="{{pub_key}}"
+      src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
       type="text/javascript"
     ></script>
 
@@ -269,11 +271,13 @@ function removePassword: (params: RemoveUserPasswordParams) => Promise<User>;
     <p id="error"></p>
     <button id="remove-password-button">Remove Password</button>
 
+    <!-- Initialize Clerk with your
+    Clerk Publishable key and Frontend API URL -->
     <script
       async
       crossorigin="anonymous"
-      data-clerk-publishable-key='{{pub_key}}'
-      src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+      data-clerk-publishable-key="{{pub_key}}"
+      src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
       type="text/javascript"
     ></script>
 
