--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -241,12 +241,12 @@ To configure your proxy setup using environment variables, your `.env.local` fil
 
         ```html filename="index.html"
           <!-- Initialize Clerk with your
-          Clerk publishable key and Frontend API URL -->
+          Clerk Publishable key and Frontend API URL -->
           <script
             async
             crossorigin="anonymous"
             data-clerk-publishable-key="{{pub_key}}"
-            src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+            src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
             type="text/javascript"
           ></script>
 
