--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -154,12 +154,12 @@ function mountSignIn(node: HTMLDivElement, props?: SignInProps): void;
   <div id="sign-in"></div>
 
   <!-- Initialize Clerk with your
-  Clerk publishable key and Frontend API URL -->
+  Clerk Publishable key and Frontend API URL -->
   <script
     async
     crossorigin="anonymous"
-    data-clerk-publishable-key='{{pub_key}}'
-    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -223,12 +223,12 @@ function unmountSignIn(node: HTMLDivElement): void;
   <div id="sign-in"></div>
 
   <!-- Initialize Clerk with your
-  Clerk publishable key and Frontend API URL -->
+  Clerk Publishable key and Frontend API URL -->
   <script
     async
     crossorigin="anonymous"
-    data-clerk-publishable-key='{{pub_key}}'
-    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -282,12 +282,12 @@ function openSignIn(props?: SignInProps): void;
 
   ```html filename="index.html" {5}
   <!-- Initialize Clerk with your
-  Clerk publishable key and Frontend API URL -->
+  Clerk Publishable key and Frontend API URL -->
   <script
     async
     crossorigin="anonymous"
-    data-clerk-publishable-key='{{pub_key}}'
-    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -332,12 +332,12 @@ function closeSignIn(): void;
 
   ```html filename="index.html" {9}
   <!-- Initialize Clerk with your
-  Clerk publishable key and Frontend API URL -->
+  Clerk Publishable key and Frontend API URL -->
   <script
     async
     crossorigin="anonymous"
-    data-clerk-publishable-key='{{pub_key}}'
-    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
