--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -126,12 +126,12 @@ function mountCreateOrganization(node: HTMLDivElement, props?: CreateOrganizatio
   <div id="create-organization"></div>
 
   <!-- Initialize Clerk with your
-  Clerk publishable key and Frontend API URL -->
+  Clerk Publishable key and Frontend API URL -->
   <script
     async
     crossorigin="anonymous"
-    data-clerk-publishable-key='{{pub_key}}'
-    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -195,12 +195,12 @@ function unmountCreateOrganization(node: HTMLDivElement): void;
   <div id="create-organization"></div>
 
   <!-- Initialize Clerk with your
-  Clerk publishable key and Frontend API URL -->
+  Clerk Publishable key and Frontend API URL -->
   <script
     async
     crossorigin="anonymous"
-    data-clerk-publishable-key='{{pub_key}}'
-    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -264,12 +264,12 @@ function openCreateOrganization(props?: CreateOrganizationProps): void;
   <div id="create-organization"></div>
 
   <!-- Initialize Clerk with your
-  Clerk publishable key and Frontend API URL -->
+  Clerk Publishable key and Frontend API URL -->
   <script
     async
     crossorigin="anonymous"
-    data-clerk-publishable-key='{{pub_key}}'
-    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -327,12 +327,12 @@ function closeCreateOrganization(): void;
   <div id="create-organization"></div>
 
   <!-- Initialize Clerk with your
-  Clerk publishable key and Frontend API URL -->
+  Clerk Publishable key and Frontend API URL -->
   <script
     async
     crossorigin="anonymous"
-    data-clerk-publishable-key='{{pub_key}}'
-    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
