--- a/docs/components/organization/organization-switcher.mdx
+++ b/docs/components/organization/organization-switcher.mdx
@@ -143,12 +143,12 @@ function mountOrganizationSwitcher(node: HTMLDivElement, props?: OrganizationSwi
   <div id="organization-switcher"></div>
 
   <!-- Initialize Clerk with your
-  Clerk publishable key and Frontend API URL -->
+  Clerk Publishable key and Frontend API URL -->
   <script
     async
     crossorigin="anonymous"
-    data-clerk-publishable-key='{{pub_key}}'
-    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -212,12 +212,12 @@ function unmountOrganizationSwitcher(node: HTMLDivElement): void;
   <div id="organization-switcher"></div>
 
   <!-- Initialize Clerk with your
-  Clerk publishable key and Frontend API URL -->
+  Clerk Publishable key and Frontend API URL -->
   <script
     async
     crossorigin="anonymous"
-    data-clerk-publishable-key='{{pub_key}}'
-    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
