--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -261,12 +261,12 @@ function mountUserButton(node: HTMLDivElement, props?: UserButtonProps): void;
   <div id="user-button"></div>
 
   <!-- Initialize Clerk with your
-  Clerk publishable key and Frontend API URL -->
+  Clerk Publishable key and Frontend API URL -->
   <script
     async
     crossorigin="anonymous"
-    data-clerk-publishable-key='{{pub_key}}'
-    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -330,12 +330,12 @@ function unmountUserButton(node: HTMLDivElement): void;
   <div id="user-button"></div>
 
   <!-- Initialize Clerk with your
-  Clerk publishable key and Frontend API URL -->
+  Clerk Publishable key and Frontend API URL -->
   <script
     async
     crossorigin="anonymous"
-    data-clerk-publishable-key='{{pub_key}}'
-    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
