--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -203,13 +203,13 @@ Select your preferred method below to get started.
       <InjectKeys>
 
       ```html filename="index.html"
-        <script
-          async
-          crossorigin="anonymous"
-          data-clerk-publishable-key={{pub_key}}
-          src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
-          type="text/javascript"
-        ></script>
+      <script
+        async
+        crossorigin="anonymous"
+        data-clerk-publishable-key="{{pub_key}}"
+        src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+        type="text/javascript"
+      ></script>
       ```
 
       </InjectKeys>
@@ -246,11 +246,13 @@ Select your preferred method below to get started.
       ```html filename="index.html"
       <div id="app"></div>
 
+      <!-- Initialize Clerk with your
+      Clerk Publishable key and Frontend API URL -->
       <script
         async
         crossorigin="anonymous"
-        data-clerk-publishable-key={{pub_key}}
-        src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+        data-clerk-publishable-key="{{pub_key}}"
+        src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
         type="text/javascript"
       ></script>
 
